--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,10 @@
-<h1>Sample App</h1>
-<p>
-This is the home page for the
-  <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
-sample application.
-</p>
+<div class="jumbotron center">
+  <h1>Welcome to the Sample App</h1>
+  <h2>
+    This is the home page for the
+    <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    sample application Sample App.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
